--- a/二叉树的遍历/二叉树的创建.vcxproj
+++ b/二叉树的遍历/二叉树的创建.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{0b684da6-0dc9-4a0d-baf5-0a13576a3fb1}</ProjectGuid>
     <RootNamespace>二叉树的创建</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>二叉树的遍历</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,10 +141,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BinTree.c" />
+    <ClCompile Include="LinkStack.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="Order.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BinTree.h" />
+    <ClInclude Include="LinkStack.h" />
+    <ClInclude Include="Order.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
