--- a/二叉树的遍历/二叉树的创建.vcxproj.filters
+++ b/二叉树的遍历/二叉树的创建.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="LinkStack.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="LinkQueue.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BinTree.h">
@@ -36,6 +39,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="LinkStack.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="LinkQueue.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
