--- a/二叉树的基本功能/二叉树的创建.vcxproj
+++ b/二叉树的基本功能/二叉树的创建.vcxproj
@@ -24,7 +24,7 @@
     <ProjectGuid>{0b684da6-0dc9-4a0d-baf5-0a13576a3fb1}</ProjectGuid>
     <RootNamespace>二叉树的创建</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>二叉树的遍历</ProjectName>
+    <ProjectName>二叉树的基本功能</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
